add_library(zlib STATIC
             adler32.c
             compress.c
             crc32.c
             deflate.c
             gzclose.c
             gzlib.c
             gzread.c
             gzwrite.c
             infback.c
             inffast.c
             inflate.c
             inftrees.c
             ioapi.c
             ioapi_buf.c
             ioapi_mem.c
             trees.c
             uncompr.c
             unzip.c
             zip.c
             zutil.c
)

